Tue Sep 15 09:06:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list: add an entry for Eaton E Series DX UPS (1-20 kVA) with
   mge-utalk.

Tue Sep 15 08:16:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list: add an entry for Eaton E Series NV UPS (400-2000 VA) with
   megatec_usb (reported by Vitor Choi Feitosa).

Tue Sep  8 18:57:51 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - m4/nut_check_libnetsnmp.m4: check for presence of header files to see
   if development files are installed

Tue Sep  8 09:39:24 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/ivtscd.c: complete general information (device.{mfr,model,type}),
 - man/ivtscd.8, man/Makefile.am: add the manpage for ivtscd driver,
 - data/driver.list: add an entry for IVT SCD-series devices.

Fri Sep  4 08:36:21 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - scripts/perl/Nut.pm: embed the NUT Perl client module,
   (patch from Gabor Kiss)
 - COPYING, scripts/README: update information for Perl module inclusion.

Fri Sep  4 08:12:52 UTC 2009 / Arnaud Quette <arnaud.quette@free.fr>

 - drivers/apc-hid.c: fix input.transfer.reason support by using the standard
   BOOL lookup mechanism (thanks Arjen), and bump the subdriver version to 0.94.

Thu Sep  3 11:49:12 UTC 2009 / Arnaud Quette <arnaud.quette@free.fr>

 - drivers/apc-hid.c: add input.transfer.reason and input.sensitivity, along
   with some more reverse engineered information.
   (reported by Markus Wildi)

Wed Sep  2 19:52:21 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - drivers/ietfmib.h,drivers/mgemib.h: Indexes start at 1 (not 0).

Tue Aug 25 20:40:28 UTC 2009 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.[ch]: remove delayed matching which wasn't really
   useful, since it requires claiming the device, breaking any existing
   bindings in the process (should also fix Alioth bug #311869)

Tue Aug 18 01:22:14 UTC 2009 / Charles Lepple <clepple@gmail.com>
