@@ -351,27 +351,27 @@ static int tripplite_claim(HIDDevice_t *hd) {
 		case HP_VENDORID:
 			return 0;
 	
-		/* reject known non-HID devices */
-		/* not all Tripp Lite products are HID, some are "serial over USB". */
 		case TRIPPLITE_VENDORID:
+			/* reject known non-HID devices */
+			/* not all Tripp Lite products are HID, some are "serial over USB". */
 			if (hd->ProductID == 0x0001) {
 				/* e.g. SMART550USB, SMART3000RM2U */
 				upsdebugx(0, "This Tripp Lite device (%04x/%04x) is not supported by usbhid-ups.\n"
 						 "Please use the tripplite_usb driver instead.\n",
 						 hd->VendorID, hd->ProductID);
-			} else {
-				possibly_supported("Tripp Lite", hd);
+				return 0;
 			}
 
-			return 0;
-
-		/* by default, reject, unless the productid option is given */
-		default:
+			/* by default, reject, unless the productid option is given */
 			if (getval("productid")) {
 				return 1;
 			}
 
-			possibly_supported("Belkin", hd);
+			possibly_supported("TrippLite", hd);
+			return 0;
+
+		/* catch all (not really needed) */
+		default:
 			return 0;
 		}
 
